Changes for 1.0

* add tdice dice servers (sgb)

* lock warnings don't show error dialog (sgb)

* fix bug [ 1962058 ] fighter move in non combat (sgb)

* allow selection of text on chat panel (sgb)

* remove non existent irony dice server (sgb)

Changes for 0.9.4.2

* in edit mode, don't always ask the user to choose the units to remove (sgb)

* add game id, to be used in future pbem server (sgb)

* remove uneeded base tiles, this fixes the white space near algeria (sgb)

Changes for 0.9.4.1

* fix bad anti aliasing effects when scaled at 100% (sgb)

* increase max heap size to 196M (sgb)

Changes for 0.9.4

* simplify right click map dragging (sgb)

* reorganize menus slightly, add export menu (sgb)

* turn antialiasing on for map drawing, makes scaling look better on windows (sgb)

* fix spelling mistakes in revised (zero pilot)

* updated revized map (zero pilot)

* fix bug 1890628 freeze in triplea 0.9.3 (sgb)

* fix bug 1905413 can't move units with a warning (sgb)

* fix bid (all bid ipcs were being added to the player) (sgb)

* In europe incomplete, changed the transport cost of artilery to 2, so 2 may be transported (comradekev)

* fixed bug[ 1896778 ] In Pacific game cannot move between sea zone 37 and Kiangsi (comradekev)

* fixed bug [ 1910221 ] Undone Movement Null Pointer (sgb)

* update great war to version 2.0 (Jason Clark)

* fix highlight unit drawing bug (sgb)

* fix null pointer when ai plays in capture the flag (sgb)

* improved game notes button (sgb)

* fix null pointer when attacking neutral countries (sgb)

* add ant run command for running from command line (sgb)

Changes for 0.9.3

* fix [ 1870424 ] can't leave tic tac toe game after the game is over, also fix tic tac toe networked mode (sgb)

* disable main button on startup screen, as it overrides send message send (sgb)

* more PBEM posting fixes (tclayton)

* re-add screenshot overlay settings to map.properties in revised (tclayton)
